corpus/idk.txt
==================
idk something
==================

# comment here
~ <something name>

# another comment; $A =[bciawd]
$bc= <A>;
$ bc=<A>;
      ! bruh;++++
      ?+ bruh some test
;;?!another test

---

(source_file
    (statement (comment))
    (statement
        (mode)
    )
    (statement (comment))
    (statement
        (class
            (name)
            (regex)
        )
    )
    (statement
        (class
            (name)
            (regex)
        )
    )
    (statement
        (class
            (name)
            (regex)
        )
    )
    (statement
        (rule
            (negative)
            (regex)
        )
    )
    (statement
        (rule
            (positive)
            (regex)
        )
    )
    (statement
        (test
            (positive)
            (word)
        )
    )
    (statement
        (test
            (negative)
            (word)
        )
    )
)

